# iris-pgwire

./: .bandit  .bumpversion.cfg  .gitignore  .gitlab-ci.yml  BUG_FIX_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CLEANUP_COMPLETE.md  COMPETITIVE_ANALYSIS.md  Dockerfile  Dockerfile.test  FEATURE_025_COMPLETION.md  INTEGRATEDML_CONFIGURATION.md  INTEGRATEDML_SUPPORT.md  IRIS_CONSTRUCTS_IMPLEMENTATION.md  IRIS_ENTERPRISE_SETUP_GUIDE.md  IRIS_SQL_ANALYSIS.md  JDBC_COMPATIBILITY_COMPLETE.md  KNOWN_LIMITATIONS.md  LICENSE  MANIFEST.in  PERFORMANCE.md  PHASE_3_4_COMPLETION.md  PHASE_3_5_COMPLETION.md  PROGRESS.md  README.md  RESEARCH_BACKLOG.md  STATUS.md  TESTING.md  TODO.md  VALIDATION_REPORT.md  docker-compose.prod.yml  docker-compose.yml  iris.key  iris_pgwire.json  merge.cpf  pyproject.toml  pytest.ini  test_backpressure_verification.py  test_p2_real_client.py  (+6 more)
.github/: GITHUB_ACTIONS_STATUS.md
benchmarks/: 3way_comparison.py  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  README_4WAY.md  __init__.py  async_sqlalchemy_stress_test.py  config.py  docker-compose.4way.yml  docker-compose.benchmark.yml  init-iris-benchmark.sh  init-iris.sh  metrics.py  run_4way_benchmark.sh  run_benchmark.sh  runner.py  setup_4way_data.py  setup_multidim_vectors.py  sync_sqlalchemy_stress_test.py  validate_connections.py  vector_query_comparison.py
docker/: docker-compose.ipm.yml  merge.cpf
docs/: ADDITIONAL_CLIENT_RECOMMENDATIONS.md  ASYNCPG_FINAL_STATUS.md  ASYNCPG_FIX_SUMMARY.md  ASYNCPG_PARAMETER_TYPE_INVESTIGATION.md  ASYNC_SQLALCHEMY_QUICKSTART.md  CLIENT_RECOMMENDATIONS.md  COLUMN_ALIAS_INVESTIGATION.md  COPY_PERFORMANCE_INVESTIGATION.md  DBAPI_BACKEND.md  DEBUGGING_INVESTIGATION_2025_10_03.md  DEPLOYMENT.md  DEVELOPMENT.md  DUAL_PATH_ARCHITECTURE.md  EMBEDDED_PYTHON_SERVERS_HOWTO.md  EPIC_Hack.md  HNSW_FINDINGS_2025_10_02.md  HNSW_INVESTIGATION.md  INTEGRATEDML_ANALYSIS.md  INTERSYSTEMS_PACKAGE_NAMING_ISSUE.md  IRIS_DBAPI_LIMITATIONS_JIRA.md  IRIS_DOCUMENT_DATABASE_RESEARCH.md  IRIS_SPECIAL_CONSTRUCTS.md  IRIS_VECTOR_PARAMETRIZATION_LIMITATION.md  KERBEROS_TROUBLESHOOTING.md  LANGCHAIN_INTEGRATION.md  OAUTH_TROUBLESHOOTING.md  POSTGRESQL_COMPATIBILITY.md  PRE_COMMIT_SETUP.md  PRODUCTION_DEPLOYMENT.md  PROTOCOL_COMPLETENESS_AUDIT.md  PYPI_RELEASE.md  README-DEPLOYMENT.md  RECENT_DEVELOPMENTS.md  REST_API_STRATEGY.md  SQLALCHEMY_ASYNC_SUPPORT.md  WALLET_TROUBLESHOOTING.md  api_documentation.md  confidence_analysis_api.md  developer_guide.md  iris_pgwire_plan.md  (+2 more)
examples/: test_bi_tools.sh
ipm/: module.xml  requirements.txt
scripts/: create_healthcare_fixture.py  create_test_vectors.py  manual_e2e_test.md  run_e2e_benchmark.py  start-pgwire-embedded.sh  start-production.sh  test_optimizer_integration.py  validate-quickstart.sh  validate_package.sh  validate_quickstart.py  validate_reserved_keywords.py
specs/: ENTERPRISE_AUTH_BRIDGE_REVISED.md  KERBEROS_GSSAPI_OPTIONS.md  KERBEROS_GSSAPI_SUMMARY.md  iris-docker-setup.md  test-development-strategy.md
test-results/: integration-results.xml
tests/: README.md  __init__.py  conftest.py  flaky_tests.md  test_all_vector_sizes.py  test_binary_vectors.py  test_contract_iris_translation.py  test_copy_protocol.py  (+13 more)
tests/client_compatibility/rust/: Cargo.toml  README.md  run-tests.sh
tests/client_compatibility/rust/tests/: connection_tests.rs  query_tests.rs  transaction_tests.rs
(+496 files in other folders)
